pity commit will be reverted if necessary...

--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   },
   "dependencies": {
     "@node-redis/client": "^1.0.6",
+    "@types/kafkajs": "^1.9.0",
     "@types/redis": "^4.0.11",
     "axios": "^0.27.2",
     "chalk": "4.1.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "i": "^0.3.7",
+    "kafkajs": "^2.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^4.7.0",
+    "npm": "^8.14.0",
     "redis": "^4.2.0",
     "typescript": "^4.7.4"
   },
