--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npx eslint src/*"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.6.8",
     "@node-redis/client": "^1.0.6",
     "@types/kafkajs": "^1.9.0",
     "@types/redis": "^4.0.11",
@@ -24,6 +25,7 @@
     "moment": "^2.29.4",
     "mongodb": "^4.7.0",
     "npm": "^8.14.0",
+    "proto-loader": "^0.2.0",
     "redis": "^4.2.0",
     "typescript": "^4.7.4"
   },
