--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "lint": "npx eslint src/*"
+    "build": "tsc",
+    "lint": "npx eslint src/*",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.6.8",
